3rd unit portrait now worksand bugfixed the maincontainer expanding too much

--- a/cookieClicker.css
+++ b/cookieClicker.css
@@ -76,7 +76,7 @@
     display: flex;
     flex-direction: column;
     width: 100rem;
-    height: 40rem;
+    height: 48rem;
     margin: auto;
     margin-top: 1rem;
 }
@@ -99,6 +99,7 @@
     background-color: rgba(255, 255, 255, 0.3);
     overflow-y: scroll;
     width: 30rem;
+    height: 30rem;
 }
 
 /* Main page: cookie popups */
